--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "dependencies": {
-    "colors": "^1.4.0"
-  },
-  "devDependencies": {
-    "connect": "^3.7.0",
-    "server-static": "^2.0.5"
+    "colors": "^1.4.0",
+    "express": "^4.17.1"
   }
 }
