--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "colors": "^1.4.0",
-    "express": "^4.17.1"
+    "serve-static": "^1.14.1"
+  },
+  "devDependencies": {
+    "connect": "^3.7.0"
   }
 }
